--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,6 +13,7 @@
     "crypto": "^1.0.1",
     "express": "^5.1.0",
     "mongoose": "^8.19.3",
-    "nodemailer": "^7.0.10"
+    "nodemailer": "^7.0.10",
+    "nodemon": "^3.1.11"
   }
 }
